removed commented out lines and fix some comments